Fix overflow scrolling.

--- a/scss/popup.scss
+++ b/scss/popup.scss
@@ -19,7 +19,7 @@ button:not(.disabled):not(:disabled) {
   cursor: pointer;
 }
 
-body, .popup {
+body, #body, .popup {
   // Using 100% here should work, but it doesn't. The browser popup must do something weird
   // such that it changes width depending on the contents, even when it's 100% of the <html>
   // width (which is explicitly specified). :/
